tests/security/taintedInParentLoader/output.txt
ERROR: TaintedData - input.hack:15:25 - Data from a URL query string found its way to a SQL query using path $_GET --ExpressionFetch(ArrayValue, "user_id")--> $_GET['user_id'] (input.hack:27:23) --Default--> call to C::foo (input.hack:27:14) --Default--> C::foo#1 (input.hack:22:32) --Default--> $user_id (input.hack:22:32) --Default--> call to AGrandChild::loadFull (input.hack:23:31) --Default--> AGrandChild::loadFull#1 (input.hack:4:44) --Default--> A::loadFull#1 (input.hack:23:31) --Default--> $sink (input.hack:4:44) --Default--> call to A::loadPartial (input.hack:5:29) --Default--> A::loadPartial#1 (input.hack:2:56) --Default--> AChild::loadPartial#1 (input.hack:14:47) --Default--> $sink (input.hack:14:47) --Default--> composition (input.hack:15:25) --Default--> call to AsyncMysqlConnection::query (input.hack:15:25) --Default--> AsyncMysqlConnection::query#1 (hi_embedded_stdlib/builtins_async_mysql.hhi:164:12)